--- a/index.html
+++ b/index.html
@@ -13,15 +13,35 @@
     <header>
 
     </header>
-    <main class="w-4/5 container mx-auto mt-8">
+    <main class="w-4/5 container mx-auto my-10">
         <section class="bg-black p-5 rounded-2xl mb-5">
-            <input id="search-field" type="text" placeholder="Type here" class="input w-full max-w-xs" />
-            <button onclick="handleSearch()" class="btn">Search</button>
+            <!-- <input id="search-field" type="text" placeholder="Type here" class="input w-full max-w-xs" />
+            <button onclick="handleSearch()" class="btn">Search</button> -->
+            <input id="search-input" type="text" placeholder="Type here"
+                class="input w-full max-w-xs border-2 border-blue-600" />
+            <button onclick="handleSearch2()" class="btn btn-info">Search</button>
         </section>
         <section>
+            <div id="loading-container" class="text-center my-56 hidden">
+                <span class="loading loading-spinner loading-lg px-10"></span>
+            </div>
             <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
             </div>
+            <button id="show-all" class="btn btn-success text-white text-lg mt-4 hidden">Show All</button>
         </section>
+        <!-- Open the modal using ID.showModal() method -->
+        <dialog id="show_details_modal" class="modal modal-bottom sm:modal-middle">
+            <div class="modal-box">
+                <h3 id="show-details-phone-name" class="font-bold text-lg">Hello!</h3>
+                <p class="py-4">Press ESC key or click the button below to close</p>
+                <div class="modal-action">
+                    <form method="dialog">
+                        <!-- if there is a button in form, it will close the modal -->
+                        <button class="btn">Close</button>
+                    </form>
+                </div>
+            </div>
+        </dialog>
     </main>
     <footer>
 
